fix default horizontal alignment for photo header

--- a/wp-content/themes/chicago-reporter/less/photo-header.less
+++ b/wp-content/themes/chicago-reporter/less/photo-header.less
@@ -20,6 +20,7 @@ header.photo-header-background {
     color: white;
     max-width: 500px;
     text-shadow: .5px .5px 8px #000000;
+    margin-left: 8%;
   }
 
   h1.entry-title {
@@ -101,6 +102,11 @@ section.entry-content.clearfix {
       margin-bottom: 24px;
     }
   }
+}
+
+.left {
+  float: none;
+  margin: inherit;
 }
 
 
